@startuml

left to right direction
skinparam shadowing false

entity category {
    *id
    *category
} 

entity page {
    *id
    *url
    *HTMLContent
    *dateTimeCrawled
    *category_id
}

entity product {
    *id
    *url
    *HTMLContent
    *page_id
}

entity productData {
    *id
    *url
    *HTMLContent
    *dateTimeCrawled
    *price
    *brand
    *itemName
    *size
    *product_id
}


entity author_questions_generic {
    *id
    *englishQuery
    *SQLQuery
}

entity author_questions_explicit {
    *id
    *englishQuery
    *SQLQuery
}


category ||..o{ page
page ||..o{ product
product ||..||productData

entity products {
    *id
    *category
    *price
    *brand
    *itemname
    *size
    *unit
}
@enduml